--- a/Css/style.css
+++ b/Css/style.css
@@ -3,29 +3,29 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Inter", serif;
 }
 
 nav{
     background-color: #F5F7FA;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     height: 60px;
     margin-bottom: 4px;
     align-items: center;
-    font-family: "Inter", serif;
 }
 
 nav .first-ul{
     list-style: none;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(6, 1fr);
 
 }
 
 nav .second-ul{
     list-style: none;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
 }
 
 nav ul li a{
@@ -95,16 +95,15 @@ nav .logo img{
 .home .Hero-section{
     display: grid;
     height: 60vh;
-    grid-template-columns: 1fr 1fr;
-    border: 1px solid red;
+    grid-template-columns: repeat(2, 1fr);
     background-color: #F5F7FA;
 }
 
 .home .Hero-section figure img{
     width: 400px;
     position: absolute;
-    right: 100px; 
-    top: 90px;
+    right: 144px; 
+    top: 89px;
 }
 
 
@@ -112,9 +111,10 @@ nav .logo img{
 .home .eclippse ul{
     list-style: disc;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    border: 1px solid red;
-    left: 500px;
+    grid-template-columns: repeat(3, 1fr);
+    position: relative;
+    width: 30px;
+    left: 750px;
     background-color: #F5F7FA;
     
 }
@@ -128,7 +128,456 @@ nav .logo img{
     opacity: 30%;
 }
 
-.home .eclippse ul .first-eclip{
+.hero-sec-part1 h1{
+    color: #4D4D4D;
+    font-size: 60px;
+    position: relative;
+    top: 150px;
+    left: 141px;
+}
+
+.hero-sec-part1 h1 span{
     color: #4CAF4F;
+}
+
+.hero-caption{
+    color: #717171;
+    position: absolute;
+    font-size: 12px;
+    top: 370px;
+    left: 141px;
+}
+
+.register-button{
+    background-color: #4CAF4F;
+    padding: 14px 32px;
+    color: #FFFFFF;
+    border-radius: 5px;
+    position: relative;
+    left: 141px;
+    top: 175px;
+    border: none;
+}
+
+.clients{
+    background-color: #FFFFFF;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.clients-text h1{
+    color: #4D4D4D;
+    font-size: 30px;
+}
+
+.clients-caption{
+    position: relative;
+    top: 8px;
+}
+
+.clients-logos img{
+    margin-top: 20px;
+}
+
+.community{
+    margin-top: 30px;
+}
+
+.community .community-text{
+    text-align: center;
+}
+
+.community .community-text h1{
+    font-size: xx-large;
+    color: #4D4D4D;
+}
+
+.community .community-text small{
+    color: #717171;
+    font-size: 13px;
+    position: relative;
+    top: 8px;
+}
+
+.community-explain{
+    margin-top: 26px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    text-align: center;
+}
+
+.membership-organisations, .national-associations, .clubs-and-groups{
+    padding: 5px;
+    height: 200px;
+}
+
+.hed-ing{
+    color: #4D4D4D;
+}
+
+.community-explain small{
+    color: #717171;
+}
+
+.unlock{
+    background-color: #FFFFFF;
+    display: grid;
+    margin-top: 42px;
+    height: 430px;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.unlock-header{
+    width: 661px;
+    margin: auto 144px;
+    height: 268px;
+}
+
+.unlock-header article h1{
+    color: #4D4D4D;
+    font-weight: 600;
+    font-size: 36px;
+}
+
+.unlock-header article small{
+    color: #717171;
+    position: relative;
+    width: 600px;
+    top: 20px;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.unlock-header button{
+    background-color: #4CAF4F;
+    color: white;
+    padding: 14px 32px;
+    width: 151px;
+    height: 52px;
+    font-weight: 500;
+    font-size: 16px;
+    border-radius: 4px;
+    border: none;
+    margin-top: 50px;
+    
+}
+
+.phone-login-image img{
+    position: relative;
+    width: 441px;
+    height: 328px;
+    left: 144px;
+    top: 52px;
+}
+
+.achievements{
+    background-color: #F5F7FA;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    height: 288px;
+    align-items: center;
+}
+
+.row1, .row2{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.row1-item1, .row1-item2, .row2-item1, .row2-item2{
+    display: grid;
+    grid-template-columns: auto 1fr;
+}
+
+.section-heading h1{
+    color: #4D4D4D;
+    font-size: 36px;
+    font-weight: 600;
+}
+
+.section-heading article{
+    position: relative;
+    left: 144px;
+}
+
+.heading-description{
+    color: #18191F;
+}
+
+.section-heading h1 span{
+    color: #4CAF4F;
+}
+
+.row2{
+    margin-top: 46px;
+}
+
+.count article{
+    position: relative;
+    left: 10px;
+}
+
+.calender{
+    background-color: #FFFFFF;
+    margin-top: 48px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    height: 433px;
+}
+
+.calender figure img{
+    position: relative;
+    left: 144px;
+}
+
+.calender-heading{
+    margin: auto 0;
+    width: 661px;
+    height: 308px;
+}
+
+.calender-heading .heading-text h1{
+    color: #4D4D4D;
+    font-weight: 600;
+    font-size: 36px;
+}
+
+.calender-heading .heading-text small{
+    color: #717171;
+    font-weight: 400;
+    font-size: 14px;
+    position: relative;
+    top: 16px;
+}
+
+.calender-heading button{
+    background-color: #4CAF4F;
+    color: white;
+    padding: 14px 32px;
+    width: 151px;
+    height: 52px;
+    font-weight: 500;
+    font-size: 16px;
+    border-radius: 4px;
+    border: none;
+    margin-top: 53px;
+}
+
+.customers{
+    background-color: #F5F7FA;
+    margin-top: 48px;
+    height: 390px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.customers-heading article{
+    color: #717171;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.customers-heading p{
+    margin-top: 20px;
+    color: #4CAF4F;
+    font-weight: 600;
+   font-size: 20px;
+
+}
+
+.small-caption{
+    color: #717171;
+    position: relative;
+    top: 8px;
+}
+
+.all-customers{
+    position: absolute;
+    left: 548px;
+    width: 748px;
+    height: 168px;
+    margin-top: 38px;
+}
+
+.tesla-logo{
+    position: absolute;
+    left: 144px;
+    width: 350px;
+}
+
+
+.customers-logos{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 32px;
+}
+
+.customers-logos figure img{
+    width: 500px;
+}
+
+.customers-logos a{
+    text-decoration: none;
+    color: #4CAF4F;
+    font-weight: 600;
+    font-size: 20px;
+    margin: auto 20px;
+}
+
+.community-updates{
+    text-align: center;
+    margin-top: 48px;
+    background-color: #FFFFFF;
+}
+
+.prin-community-head{
+    color: #717171;
+    width: 628px;
+    position: relative;
+    margin-top: 8px;
+    margin-bottom: 16px;
+    left: 450px;
+}
+
+.community-updates-figures{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.fig-caption{
+    background-color: #F5F7FA;
+    position: relative;
+    bottom: 90px;
+    left: 100px;
+    padding: 16px;
+    width: 280px;
+    height: 166px;
+    box-shadow: 0px 8px 16px rgba(171, 190, 209, 0.4);
+    border-radius: 8px;
+}
+
+.fig-caption p{
+    color: #717171;
+    font-weight: 600;
+    font-size: 20px;
+    margin-top: 15px;
+}
+
+.fig-caption a{
+    color: #4CAF4F;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.link-read{
+    padding: 8px;
+    width: 260px;
+    height: 44px;
+    margin-top: 30px;
+    align-items: center;
+}
+
+.prin-community-head1{
+    color: #4D4D4D;
+    font-weight: 600;
+    font-size: 36px;
+
+}
+
+
+footer .footer-heading{
+    background-color: #F5F7FA;
+    height: 300px;
+    text-align: center;
+    margin-top: 94.6px;
+}
+
+footer .footer-heading article{
+    width: 100%;
+    color: #263238;
+    font-weight: 600;
+    font-size: 44px;
+    left: 300px;
+    top: 15px;
+}
+
+footer .footer-heading button{
+    background-color: #4CAF4F;
+    color: white;
+    padding: 14px 32px;
+    width: 178px;
+    height: 52px;
+    font-weight: 500;
+    font-size: 16px;
+    border-radius: 4px;
+    border: none;
+    margin-top: 33px;
+}
+
+
+.principale-footer{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 64px 165px;
+    height: 328px;
+    background-color: #263238;
+}
+
+.footer-links{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.col1, .col2{
+    width: 160px;
+    height: 200px;
+}
+
+.col3{
+    width: 255px;
+    height: 92px;
+}
+
+.col1 a, .col2 a{
+    display: block;
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 14px;
+    color: #F5F7FA;
+    margin: 15px 0;
+}
+
+.input-forum{
+    background-color: #ffffff35;
+    width: 255px;
+    height: 40px;
+    border-radius: 7px;
+    margin-top: 27px;
+}
+
+.input-forum input{
+    background-color: transparent;
+    margin: 10px 0 0 10px;
+    border: none;
+}
+
+
+.input-forum a{
+    margin-left: 35px;
+}
+
+.footer-links h1{
+    color: #FFFFFF;
+    font-size: 20px;
+}
+
+
+.company-info p{
+    color: #FFFFFF;
+    font-weight: 300;
+}
+
+.social-links-icons{
+    margin-top: 40px;
 }
 
