I create a new html file with her new css unique file for features and in features html file i added the same navigation bar and also the same footer with the same styles and after in the main main section i add a div for the heading text and after this i create a section with class features when i create a div containe all features card and inside it i create another four div's represent the features boxes and this boxes have the same class but a different id and i give for him a lightgreen background color inside any boxes we have a simple icon explaine the content of this boxe and also a header with her caption and a small button

--- a/Css/style.css
+++ b/Css/style.css
@@ -657,3 +657,46 @@ footer .footer-heading button{
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     background-color: #0C885E;
 }
+
+/* .features-header{
+    position: relative;
+    top: 50px;
+    text-align: center;
+}
+
+.features-principale-heading{
+    color: #4D4D4D;
+    font-weight: 500;
+    font-size: 48px;
+}
+
+.features-principale-caption{
+    font-weight: 400;
+    position: relative;
+    top: 10px;
+    font-size: 14px;
+    color: #4D4D4D;
+}
+
+.features-main{
+    height: 100vh;
+    background-color: #EFF6FF;
+} */
+
+/* .features button{
+    border: none;
+    width: 174px;
+    height: 39px;  
+    border-radius: 20px;
+    color: #FFFFFF;
+    font-weight: 400;
+    font-size: 20px;
+    position: relative;
+    top: 55px;
+    left: 650px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: #0C885E;
+} */
+
+
+
